# rightkeys

./: Cargo.toml  Makefile  README.md  config.example.kdl
assets/: rightkeys.desktop
scripts/: windows-setup.ps1
src/: config.rs  engine.rs  key.rs  main.rs  notify.rs  reload.rs  tray.rs
src/backend/: linux.rs  mod.rs  windows.rs
src/backend/actions/: findwindow.rs  mod.rs  pickelement.rs  pickwindow.rs
src/backend/linux/: enumerator.rs  executor.rs  mod.rs
