[package]
name = "rightkeys"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A cross-platform key remapper for Linux (X11) and Windows"
license = "MIT"
repository = "https://github.com/taquangtrung/rightkeys"
homepage = "https://github.com/taquangtrung/rightkeys"
readme = "README.md"
keywords = ["keyboard", "remap", "keymap", "hotkey", "keybinding"]
categories = ["command-line-utilities"]

[[bin]]
name = "rightkeys"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
kdl = "6"
log = "0.4"
png = "0.18"
regex = "1"
# `gtk` (default) provides the Linux backend; `libxdo` is dropped since the menu
# uses no accelerators, sparing the `libxdo` build dependency.
tray-icon = { version = "0.24", default-features = false, features = ["gtk"] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13"
gtk = "0.18"
x11rb = { version = "0.13", features = ["randr"] }

[target.'cfg(windows)'.dependencies]
winvd = "0.0.49"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
lto = true
codegen-units = 1
